--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "next": "^9.3.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-jsx": "^3.2.5"
+  },
+  "devDependencies": {
+    "styled-jsx-plugin-sass": "^1.0.0"
   }
 }
