--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
-    "next": "^9.3.1",
+    "framer-motion": "^1.10.3",
+    "next": "^9.3.4",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "strip-ansi": "^6.0.0",
     "styled-jsx": "^3.2.5"
   },
   "devDependencies": {
