--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-use": "^14.2.0",
     "strip-ansi": "^6.0.0",
     "styled-components": "^5.1.0"
   },
