--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^16.13.1",
     "react-use": "^14.2.0",
     "strip-ansi": "^6.0.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "three": "^0.116.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.7"
