--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^1.11.0",
     "next": "^9.4.1",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-use": "^14.3.0",
