--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
   "presets": ["next/babel"],
-  "plugins": [["styled-components", { "ssr": true, "displayName": true }]]
+  "plugins": [
+    ["styled-components", {
+      "ssr": true, "displayName": true
+    }],
+    ["prismjs", {
+      "languages": ["javascript", "css", "markup"],
+      "plugins": ["normalize-whitespace"],
+      "theme": "twilight",
+      "css": false
+    }]
+  ]
 }
