--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^1.11.0",
     "next": "^9.4.1",
     "node-sass": "^4.14.1",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -25,6 +26,7 @@
     "three": "^0.116.1"
   },
   "devDependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
     "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
