--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "keywords": [],
   "author": "Christopher Hugentobler",
   "license": "ISC",
   "dependencies": {
+    "@next/bundle-analyzer": "^9.4.4",
     "@zeit/next-sass": "^1.0.1",
+    "cross-env": "^7.0.2",
     "framer-motion": "^1.11.0",
     "next": "^9.4.4",
     "node-sass": "^4.14.1",
