--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Christopher Hugentobler",
   "license": "ISC",
   "dependencies": {
+    "@mdx-js/loader": "^1.6.5",
+    "@next/mdx": "^9.4.4",
     "@zeit/next-sass": "^1.0.1",
     "cross-env": "^7.0.2",
     "framer-motion": "^1.11.0",
