--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
@@ -15,11 +15,11 @@
   "author": "Christopher Hugentobler",
   "license": "ISC",
   "dependencies": {
-    "@mdx-js/loader": "^1.6.5",
+    "@mdx-js/loader": "^1.6.6",
     "@zeit/next-sass": "^1.0.1",
     "cross-env": "^7.0.2",
-    "framer-motion": "^1.11.0",
-    "highlight.js": "^10.1.0",
+    "framer-motion": "^1.11.1",
+    "highlight.js": "^10.1.1",
     "next": "^9.4.4",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -35,10 +35,10 @@
     "babel-plugin-prismjs": "^2.0.1",
     "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^2.5.1"
   }
 }
