--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@mdx-js/loader": "^1.6.6",
+    "@mdx-js/react": "^1.6.6",
     "@zeit/next-sass": "^1.0.1",
     "cross-env": "^7.0.2",
     "framer-motion": "^1.11.1",
-    "highlight.js": "^10.1.1",
+    "mdx-prism": "^0.3.1",
     "next": "^9.4.4",
+    "next-mdx-enhanced": "^3.0.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -38,7 +40,9 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-mdx": "^1.7.0",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^2.5.1"
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "rehype": "^11.0.0"
   }
 }
