--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": ["next/babel"],
   "plugins": [
-    ["styled-components", {
-      "ssr": true,
-      "displayName": true,
+    ["babel-plugin-styled-components", {
+      "ssr": false,
+      "displayName": false,
       "fileName": false
     }]
   ]
