--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-use": "^14.3.0",
+    "reading-time": "^1.2.0",
     "strip-ansi": "^6.0.0",
     "styled-components": "^5.1.1",
     "three": "^0.116.1",
