--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["next/babel"],
   "plugins": [
     ["babel-plugin-styled-components", {
-      "ssr": false,
+      "ssr": true,
       "displayName": false,
       "fileName": false
     }]
