--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-bundle-analyzer": "^3.8.0"
   },
   "devDependencies": {
+    "babel-plugin-import-glob-array": "^0.2.0",
     "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
