--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intersection-observer": "^8.26.2",
     "react-use": "^15.3.3",
     "reading-time": "^1.2.0",
     "strip-ansi": "^6.0.0",
