--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     {
       "src": "/linkedin",
       "status": 301,
-      "dest": "https://www.linkedin.com/in/hvgentobler"
+      "dest": "https://www.linkedin.com/in/hugentobler"
     }
   ]
 }
