--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.19",
     "@zeit/next-sass": "^1.0.1",
     "cross-env": "^7.0.2",
+    "disqus-react": "^1.0.10",
     "framer-motion": "^2.3.0",
     "mdx-prism": "^0.3.1",
     "next": "^10.0.0",
